--- a/car_price_prediction/car_price_prediction.ipynb
+++ b/car_price_prediction/car_price_prediction.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "buried-plenty",
+   "id": "demonstrated-racing",
    "metadata": {
     "tags": []
    },
    "source": [
-    "# PART 1: Car Data Cleaning\n",
+    "# Car Price Prediction\n",
     "\n",
     "---\n",
     "\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collectible-renewal",
+   "id": "baking-keeping",
    "metadata": {},
    "source": [
     "\n",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "legitimate-galaxy",
+   "id": "environmental-mexican",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "banned-boards",
+   "id": "virtual-laptop",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reverse-broad",
+   "id": "catholic-decade",
    "metadata": {},
    "source": [
     "<br />\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "plain-exhaust",
+   "id": "blocked-forest",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "touched-allergy",
+   "id": "soviet-premiere",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "friendly-local",
+   "id": "limited-marker",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "adjusted-season",
+   "id": "rental-socket",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "suffering-october",
+   "id": "tested-timeline",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "silent-classroom",
+   "id": "vietnamese-supplement",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "linear-yesterday",
+   "id": "liberal-hanging",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "olympic-subject",
+   "id": "optical-episode",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "macro-stock",
+   "id": "swedish-increase",
    "metadata": {},
    "source": [
     "<br />\n",
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "imperial-program",
+   "id": "collected-halifax",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "public-expense",
+   "id": "tired-philip",
    "metadata": {},
    "source": [
     "### Analysing These Values.\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "driving-laser",
+   "id": "cross-heading",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pleasant-neighbor",
+   "id": "mineral-guinea",
    "metadata": {},
    "source": [
     "<br />\n",
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "controversial-treasure",
+   "id": "square-train",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "familiar-beads",
+   "id": "regulated-warren",
    "metadata": {},
    "source": [
     "\n",
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "formal-disaster",
+   "id": "polished-archives",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "choice-generator",
+   "id": "latter-patent",
    "metadata": {},
    "source": [
     "<br />\n",
@@ -616,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "several-climate",
+   "id": "aquatic-spending",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reflected-supply",
+   "id": "heavy-position",
    "metadata": {},
    "source": [
     "<br />\n",
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unusual-michael",
+   "id": "amended-addition",
    "metadata": {},
    "source": [
     "## NaN Values\n",
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "minute-potential",
+   "id": "figured-building",
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "soviet-briefing",
+   "id": "taken-voluntary",
    "metadata": {
     "tags": []
    },
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "devoted-albany",
+   "id": "adequate-sport",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "respected-unknown",
+   "id": "cleared-pattern",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "resistant-empire",
+   "id": "reverse-reply",
    "metadata": {},
    "source": [
     "\n",
@@ -785,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "established-flavor",
+   "id": "wicked-cleaner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "tracked-webster",
+   "id": "recreational-oklahoma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gorgeous-stanley",
+   "id": "potential-culture",
    "metadata": {},
    "source": [
     "<br />\n",
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "handled-timer",
+   "id": "employed-criterion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "inappropriate-greensboro",
+   "id": "polish-startup",
    "metadata": {},
    "source": [
     "### 1. Random Forest\n",
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "downtown-nepal",
+   "id": "wanted-grove",
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "metallic-substance",
+   "id": "mediterranean-building",
    "metadata": {},
    "source": [
     "### 2. K-Neighbors Regressor\n",
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "seven-rouge",
+   "id": "paperback-duplicate",
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alternative-wheel",
+   "id": "square-philosophy",
    "metadata": {},
    "source": [
     "### 3. Linear Regression\n",
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "geological-stack",
+   "id": "immune-disclaimer",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forward-street",
+   "id": "cathedral-louis",
    "metadata": {},
    "source": [
     "### 4. XGBoost Regressor\n",
@@ -965,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "stuck-motor",
+   "id": "attempted-highland",
    "metadata": {
     "tags": []
    },
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extra-shore",
+   "id": "original-penetration",
    "metadata": {},
    "source": [
     "### 5. LightGBM Regressor\n",
@@ -1003,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "african-functionality",
+   "id": "certified-butterfly",
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "funky-calculation",
+   "id": "failing-belief",
    "metadata": {},
    "source": [
     "### Scores:\n",
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "commercial-excuse",
+   "id": "buried-criticism",
    "metadata": {},
    "source": [
     "<br />\n",
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "african-contributor",
+   "id": "classified-modem",
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "passive-luther",
+   "id": "enclosed-average",
    "metadata": {},
    "source": [
     "It's interesting to see how different models work. It's clear that the decision trees outperform other methods (particularly Random Forest in this case), aside from model, each model differered quick large in what it found most important."
@@ -1115,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "nominated-drinking",
+   "id": "classified-appliance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "clean-fundamental",
+   "id": "straight-ceiling",
    "metadata": {},
    "source": [
     "<br />\n",
