--- a/cell_instance_segmentation/notebooks/EDA/size_eda.ipynb
+++ b/cell_instance_segmentation/notebooks/EDA/size_eda.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "classical-marks",
+   "id": "recorded-hayes",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "large-merit",
+   "id": "ordinary-bookmark",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "modern-premiere",
+   "id": "abandoned-craps",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "satisfied-ocean",
+   "id": "impressive-monitoring",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "employed-restriction",
+   "id": "trained-jumping",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "effective-savannah",
+   "id": "preceding-brisbane",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "marked-county",
+   "id": "applied-infection",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "brilliant-court",
+   "id": "prerequisite-hamburg",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "surgical-tanzania",
+   "id": "sixth-blake",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aging-second",
+   "id": "julian-collectible",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -366,7 +366,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -380,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
